# fastapi-template

./: Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
src/: main.py
