[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["jaehyunlee <jaehyunlee1215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
setuptools = "^68.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
